@@ -32,7 +32,6 @@ define( function( require ) {
 
   // constants
   var SCALE_SIZE = new Dimension2( 55, 450 );
-  var DISPLAY_COLOR = 'rgb(135,19,70)';
   var DISPLAY_X_MARGIN = 14;
   var DISPLAY_Y_MARGIN = 10;
   var DISPLAY_CORNER_RADIUS = 12;
@@ -62,17 +61,17 @@ define( function( require ) {
     var valueXMargin = 8;
     var valueYMargin = 5;
     var valueRectangle = new Rectangle( 0, 0, valueNode.width + ( 2 * valueXMargin ), valueNode.height + ( 2 * valueYMargin ), DISPLAY_CORNER_RADIUS, DISPLAY_CORNER_RADIUS,
-      { fill: 'white' } );
+      { fill: 'white', stroke: 'darkGray' } );
 
     // label above the value
-    var labelNode = new Text( pHString, { fill: 'white', font: PH_LABEL_FONT } );
+    var labelNode = new Text( pHString, { fill: 'black', font: PH_LABEL_FONT } );
 
     // background
     var backgroundYSpacing = 6;
     var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * DISPLAY_X_MARGIN );
     var backgroundHeight = labelNode.height + valueRectangle.height + backgroundYSpacing + ( 2 * DISPLAY_Y_MARGIN );
     var backgroundRectangle = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, DISPLAY_CORNER_RADIUS, DISPLAY_CORNER_RADIUS,
-      { fill: DISPLAY_COLOR } );
+      { fill: 'rgb(222,222,222)', stroke: 'black', lineWidth: 2 } );
 
     // expand/collapse button
     var expandCollapseButton = new ExpandCollapseButton( PHScaleConstants.EXPAND_COLLAPSE_BUTTON_LENGTH, expandedProperty );
